--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -65,34 +65,34 @@
                 </li>-->
 
                 <!-- 加载版本升级菜单 -->
-                <li class="img-box">
-                    <span style="color: #fff;font-size: x-large">车机中心</span>
-                </li>
+                <!--<li class="img-box">-->
+                    <!--<span style="color: #fff;font-size: x-large">车机中心</span>-->
+                <!--</li>-->
 
-                <li>
-                    <a href="#">
-                        <i class="fa fa-home"></i>
-                        <span class="nav-label">版本管理</span>
-                        <span class="fa arrow"></span>
-                    </a>
-                    <ul class="nav nav-second-level">
-                        <li>
-                            <a class="J_menuItem" href="version/ftpserver/index.html">升级文件服务器管理</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="upgrade/manage/index.html">车辆升级管理</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="version/softhardware/index.html">软硬件版本管理</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="version/module/index.html">版本模块管理</a>
-                        </li>
-                        <li>
-                            <a class="J_menuItem" href="version/upgrade/index.html">车机升级版本管理</a>
-                        </li>
-                    </ul>
-                </li>
+                <!--<li>-->
+                    <!--<a href="#">-->
+                        <!--<i class="fa fa-home"></i>-->
+                        <!--<span class="nav-label">版本管理</span>-->
+                        <!--<span class="fa arrow"></span>-->
+                    <!--</a>-->
+                    <!--<ul class="nav nav-second-level">-->
+                        <!--<li>-->
+                            <!--<a class="J_menuItem" href="version/ftpserver/index.html">升级文件服务器管理</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a class="J_menuItem" href="upgrade/manage/index.html">车辆升级管理</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a class="J_menuItem" href="version/softhardware/index.html">软硬件版本管理</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a class="J_menuItem" href="version/module/index.html">版本模块管理</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a class="J_menuItem" href="version/upgrade/index.html">车机升级版本管理</a>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</li>-->
             </ul>
         </div>
     </nav>
