--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/edit.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/edit.html
@@ -23,17 +23,31 @@
 				<dl  >
 					<dt>软件版本号</dt>
 					<dd>
-					<input name="softVerId" placeholder="" class="form-control searchinput" dataWhere=""  dataUrl="/version/softhardware/query">
+					<input name="softVerId" placeholder="" class="form-control searchinput" dataWhere=""  dataUrl="/version/softhardware/query/1">
 				<label id="softVerId-error" class="error" for="softVerId"><i class="fa fa-info-circle fieldTip">必填</i></label>
 					</dd>
 				</dl>
 				<dl  >
 					<dt>硬件版本号</dt>
 					<dd>
-					<input name="hardVerId" placeholder="" class="form-control searchinput" dataWhere=""  dataUrl="/version/softhardware/query">
+					<input name="hardVerId" placeholder="" class="form-control searchinput" dataWhere=""  dataUrl="/version/softhardware/query/0">
 				<label id="hardVerId-error" class="error" for="hardVerId"><i class="fa fa-info-circle fieldTip">必填</i></label>
 					</dd>
 				</dl>
+                <dl  >
+                    <dt>蓝牙版本号</dt>
+                    <dd>
+                        <input name="bluetoothVerId" placeholder="" class="form-control searchinput" dataWhere="" dataUrl="/version/softhardware/query/3">
+                        <label id="bluetoothVerId-error" class="error" for="bluetoothVerId"><i class="fa fa-info-circle fieldTip">必填</i></label>
+                    </dd>
+                </dl>
+                <dl  >
+                    <dt>主版本号</dt>
+                    <dd>
+                        <input name="majorVersionId" placeholder="" class="form-control searchinput" dataWhere="" dataUrl="/version/softhardware/query/2">
+                        <label id="majorVersionId-error" class="error" for="majorVersionId"><i class="fa fa-info-circle fieldTip">必填</i></label>
+                    </dd>
+                </dl>
 				<dl  >
 					<dt>车型</dt>
 					<dd>
@@ -54,6 +68,13 @@
 				
 					</dd>
 				</dl>
+                <dl  >
+                    <dt>终端型号</dt>
+                    <dd>
+                        <input name="telModel" placeholder="" class="form-control" >
+                        <label id="telModel-error" class="error" for="telModel"><i class="fa fa-info-circle fieldTip">必填</i></label>
+                    </dd>
+                </dl>
 				<dl  >
 					<dt>生产内部版本号</dt>
 					<dd>
