--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/record/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/record/index_list2.html
@@ -13,23 +13,17 @@
 				 		<span class="caret"></span>
 				 	</button>
 					<ul class="dropdown-menu tableMenu showHideMenu" role="menu">
-				        <li><label><input value="id" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >升级版本编号</label></li>
-				        <li><label><input value="softVerIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >软件版本号</label></li>
-				        <li><label><input value="hardVerIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >硬件版本号</label></li>
-                        <li><label><input value="bluetoothVerIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >蓝牙版本号</label></li>
-                        <li><label><input value="majorVersionIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >主版本号</label></li>
-				        <li><label><input value="modelIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车型</label></li>
-				        <li><label><input value="telTypeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >终端类型</label></li>
-                        <li><label><input value="telModel" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >终端型号</label></li>
-				        <li><label><input value="innerVer" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >生产内部版本号</label></li>
-				        <li><label><input value="isOpenText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >是否对外开放</label></li>
-				        <li><label><input value="des" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >描述</label></li>
-				        <li><label><input value="upVerNo" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >升级版本号</label></li>
-				        <li><label><input value="serFtpIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >文件服务器名称</label></li>
-				        <li><label><input value="perTimeout" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >单次升级超时时长（毫秒）</label></li>
-				        <li><label><input value="perMaxVehicle" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >单次升级最大车辆数</label></li>
-				        <li><label><input value="fileName" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >升级文件名称</label></li>
-				        <li><label><input value="turnOffFlagText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >是否为拐点版本</label></li>
+				        <li><label><input value="id" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >记录编号</label></li>
+				        <li><label><input value="vin" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车架号</label></li>
+				        <li><label><input value="carModelText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车型</label></li>
+				        <li><label><input value="teNumber" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车机号</label></li>
+				        <li><label><input value="teTypeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车机类型</label></li>
+				        <li><label><input value="teModel" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车机型号</label></li>
+				        <li><label><input value="fromVersionText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >当前版本</label></li>
+				        <li><label><input value="toVersionText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >目的版本</label></li>
+				        <li><label><input value="statusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >状态</label></li>
+				        <li><label><input value="addTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >添加时间</label></li>
+				        <li><label><input value="updateTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >更新时间</label></li>
 					</ul>
 				</div>
 			</div>
@@ -65,7 +59,7 @@
 				  shade: 0.4,
 				  maxmin: true,
 				  area: ['770px', '580px'],
-				  content: "/version/upgrade/add.html?uuid="+(new Date().getTime()),
+				  content: "/version/upgrade/record/add.html?uuid="+(new Date().getTime()),
 				  zIndex: layer.zIndex, //重点1
 				  end:function(result){
 					  if(result.success){
@@ -82,7 +76,7 @@
 				  shade: 0.4,
 				  maxmin: true,
 				  area: ['770px', '580px'],
-				  content: "/version/upgrade/edit.html?id="+id,
+				  content: "/version/upgrade/record/edit.html?id="+id,
 				  zIndex: layer.zIndex, //重点1
 				  end:function(result){
 					  if(result.success){
@@ -97,7 +91,7 @@
 			layer.confirm("您确认删除该条数据吗？", {
 			  	btn: ["删除","取消"]
 			}, function(){
-				ajaxRequest(getServUrl("/version/upgrade/delete?ids="+id), "DELETE",{},
+				ajaxRequest(getServUrl("/version/upgrade/record/delete?ids="+id), "DELETE",{},
 				function(r){
 					if(r.success){
 						layer.msg("操作成功！", {icon: 1, time:1600});
@@ -119,7 +113,7 @@
 			layer.confirm("您确认删除选中数据吗？", {
 			  	btn: ["删除","取消"]
 			}, function(){
-				ajaxRequest(getServUrl("/version/upgrade/delete?ids="+ids), "DELETE",{},
+				ajaxRequest(getServUrl("/version/upgrade/record/delete?ids="+ids), "DELETE",{},
 				function(r){
 					if(r.success){
 						layer.msg("操作成功！", {icon: 1, time:1600});
@@ -137,31 +131,25 @@
 				  shade: 0.4,
 				  maxmin: true,
 				  area: ['770px', '580px'],
-				  content: "/version/upgrade/detail.html?id="+id,
+				  content: "/version/upgrade/record/detail.html?id="+id,
 				  zIndex: layer.zIndex //重点1
 			});
 		}
 	};
 
-	var tableId = "TVerUpgrade";
+	var tableId = "TVerUpgradeRecord";
 	var clms = [{checkbox: true}
-	  		,{field: "id", title: "升级版本编号", width: 110, sort:true}
-	  		,{field: "softVerIdText", title: "软件版本号", width: 110, sort:true}
-	  		,{field: "hardVerIdText", title: "硬件版本号", width: 110, sort:true}
-            ,{field: "bluetoothVerIdText", title: "蓝牙版本号", width: 110, sort:true}
-            ,{field: "majorVersionIdText", title: "主版本号", width: 110, sort:true}
-	  		,{field: "modelIdText", title: "车型", width: 110, sort:true}
-	  		,{field: "telTypeText", title: "终端类型", width: 110, sort:true}
-            ,{field: "telModel", title: "终端型号", width: 110, sort:true}
-	  		,{field: "innerVer", title: "生产内部版本号", width: 110, sort:true}
-	  		,{field: "isOpenText", title: "是否对外开放", width: 110, sort:true}
-	  		,{field: "des", title: "描述", width: 110, sort:true}
-	  		,{field: "upVerNo", title: "升级版本号", width: 110, sort:true}
-	  		,{field: "serFtpIdText", title: "文件服务器名称", width: 110, sort:true}
-	  		,{field: "perTimeout", title: "单次升级超时时长（毫秒）", width: 110, sort:true}
-	  		,{field: "perMaxVehicle", title: "单次升级最大车辆数", width: 110, sort:true}
-	  		,{field: "fileName", title: "升级文件名称", width: 110, sort:true}
-	  		,{field: "turnOffFlagText", title: "是否为拐点版本", width: 110, sort:true}
+	  		,{field: "id", title: "记录编号", width: 110, sort:true}
+	  		,{field: "vin", title: "车架号", width: 110, sort:true}
+	  		,{field: "carModelText", title: "车型", width: 110, sort:true}
+	  		,{field: "teNumber", title: "车机号", width: 110, sort:true}
+	  		,{field: "teTypeText", title: "车机类型", width: 110, sort:true}
+	  		,{field: "teModel", title: "车机型号", width: 110, sort:true}
+	  		,{field: "fromVersionText", title: "当前版本", width: 110, sort:true}
+	  		,{field: "toVersionText", title: "目的版本", width: 110, sort:true}
+	  		,{field: "statusText", title: "状态", width: 110, sort:true}
+	  		,{field: "addTime", title: "添加时间", width: 110, sort:true}
+	  		,{field: "updateTime", title: "更新时间", width: 110, sort:true}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
@@ -172,7 +160,7 @@
 			  limits: [10,15,20,30,50,100],
 			  limit: 15,
 			  height:getTableHeight(),
-			  url:getServUrl("/version/upgrade/list"),
+			  url:getServUrl("/version/upgrade/record/list"),
 			  cols:  [clms],
 			  done: function(res, curr, count){},
       	  	  response: {
@@ -184,8 +172,8 @@
 	      	  },
 	      	  request:{limitName: "rows"},
 	      	  where:{
-	      			sidx:"id",
-					sord:"asc"
+	      			sidx:"addTime",
+					sord:"desc"
 	      	  }
 	};
 
@@ -292,6 +280,6 @@
 					  };
 				});
 
-			})(authUtil.get("/version/upgrade/index.html")||{});
+			})(authUtil.get("/version/upgrade/record/index.html")||{});
 		});
 </script>
