【Updated】增加数据校验逻辑

--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/add.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/add.html
@@ -20,7 +20,7 @@
 		<form class="form-horizontal" id="addform" style="margin:15px;">
 			<div class="form-group" id="conditionId" style="height:80%;">
 				<dl  >
-					<dt>软件版本号</dt>
+					<dt>插件版本号</dt>
 					<dd>
 					<input name="softVerId" placeholder="" class="form-control searchinput" dataWhere="" dataUrl="/version/softhardware/query/1">
 					<label id="softVerId-error" class="error" for="softVerId"><i class="fa fa-info-circle fieldTip">必填</i></label>
