--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/detail.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/detail.html
@@ -26,7 +26,7 @@
 					</dd>
 				</dl>
 				<dl  >
-					<dt>软件版本号：</dt>
+					<dt>插件版本号：</dt>
 					<dd>
 					<input name="softVerId" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/version/softhardware/query/1">
 					</dd>
