--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/index_list2.html
@@ -13,8 +13,8 @@
 				 		<span class="caret"></span>
 				 	</button>
 					<ul class="dropdown-menu tableMenu showHideMenu" role="menu">
-				        <li><label><input value="id" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >升级版本编号</label></li>
-				        <li><label><input value="softVerIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >软件版本号</label></li>
+				        <li><label><input value="id" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >编号</label></li>
+				        <li><label><input value="softVerIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >插件版本号</label></li>
 				        <li><label><input value="hardVerIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >硬件版本号</label></li>
                         <li><label><input value="bluetoothVerIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >蓝牙版本号</label></li>
                         <li><label><input value="majorVersionIdText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >主版本号</label></li>
@@ -145,8 +145,8 @@
 
 	var tableId = "TVerUpgrade";
 	var clms = [{checkbox: true}
-	  		,{field: "id", title: "升级版本编号", width: 110, sort:true}
-	  		,{field: "softVerIdText", title: "软件版本号", width: 110, sort:true}
+	  		,{field: "id", title: "编号", width: 110, sort:true}
+	  		,{field: "softVerIdText", title: "插件版本号", width: 110, sort:true}
 	  		,{field: "hardVerIdText", title: "硬件版本号", width: 110, sort:true}
             ,{field: "bluetoothVerIdText", title: "蓝牙版本号", width: 110, sort:true}
             ,{field: "majorVersionIdText", title: "主版本号", width: 110, sort:true}
