--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/index_query.html
@@ -7,13 +7,13 @@
 	<form class="form-horizontal queryform">
 		<div class="form-group">
 <dl cond="id" style="display:none;">
-				<dt>升级版本编号</dt>
+				<dt>编号</dt>
 				<dd  >
 					<input  name="idEquals" placeholder="请输入数字" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="softVerId" style="display:none;">
-				<dt>软件版本号</dt>
+				<dt>插件版本号</dt>
 				<dd  >
 					<input  name="softVerIdEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/version/softhardware/query/1">
 				</dd>
