--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/edit.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/edit.html
@@ -21,7 +21,7 @@
 			<div class="form-group" id="conditionId" style="height:80%;">
 				<input name="id" id="keyInput" type="hidden"  />
 				<dl  >
-					<dt>软件版本号</dt>
+					<dt>插件版本号</dt>
 					<dd>
 					<input name="softVerId" placeholder="" class="form-control searchinput" dataWhere=""  dataUrl="/version/softhardware/query/1">
 				<label id="softVerId-error" class="error" for="softVerId"><i class="fa fa-info-circle fieldTip">必填</i></label>
