【Updated】车机版本升级：修改fromVersion

--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/record/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/record/index_list2.html
@@ -20,6 +20,7 @@
 				        <li><label><input value="teTypeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车机类型</label></li>
 				        <li><label><input value="teModel" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车机型号</label></li>
 				        <li><label><input value="fromVersionText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >当前版本</label></li>
+				        <li><label><input value="fromTypeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >当前版本数据类型</label></li>
 				        <li><label><input value="toVersionText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >目的版本</label></li>
 				        <li><label><input value="statusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >状态</label></li>
 				        <li><label><input value="addTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >添加时间</label></li>
@@ -146,6 +147,7 @@
 	  		,{field: "teTypeText", title: "车机类型", width: 110, sort:true}
 	  		,{field: "teModel", title: "车机型号", width: 110, sort:true}
 	  		,{field: "fromVersionText", title: "当前版本", width: 110, sort:true}
+	  		,{field: "fromTypeText", title: "当前版本数据类型", width: 110, sort:true}
 	  		,{field: "toVersionText", title: "目的版本", width: 110, sort:true}
 	  		,{field: "statusText", title: "状态", width: 110, sort:true}
 	  		,{field: "addTime", title: "添加时间", width: 110, sort:true}
