--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/record/detail.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/record/detail.html
@@ -46,13 +46,13 @@
 				<dl  >
 					<dt>车机类型：</dt>
 					<dd>
-                        <select class="form-control m-b" name="teType"  >
-                            <option></option>
-                            <option value="0">车厘子</option>
-                            <option value="1">中导</option>
-                            <option value="2">慧翰</option>
-                            <option value="3">通领</option>
-                        </select>
+					<select class="form-control m-b" name="teType"  >
+                         <option></option>
+                         <option value="0">车厘子</option>
+                         <option value="1">中导</option>
+                         <option value="2">慧翰</option>
+                         <option value="3">通领</option>
+                    </select>
 					</dd>
 				</dl>
 				<dl  >
@@ -65,6 +65,16 @@
 					<dt>当前版本：</dt>
 					<dd>
 					<input name="fromVersion" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/version/upgrade/query">
+					</dd>
+				</dl>
+				<dl  >
+					<dt>当前版本数据类型：</dt>
+					<dd>
+					<select class="form-control m-b" name="fromType"  >
+                         <option></option>
+                         <option value="1">升级包</option>
+                         <option value="2">插件</option>
+                    </select>
 					</dd>
 				</dl>
 				<dl  >
