--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/record/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/record/index_query.html
@@ -33,12 +33,12 @@
 <dl cond="teType" style="display:none;">
 				<dt>车机类型</dt>
 				<dd  >
-                    <select class="form-control"  name="teTypeEquals"  >
-                        <option></option>
-                        <option value="0">车厘子</option>
-                        <option value="1">中导</option>
-                        <option value="2">慧翰</option>
-                        <option value="3">通领</option>
+					<select class="form-control"  name="teTypeEquals"  >
+	                    <option></option>
+                         <option value="0">车厘子</option>
+                         <option value="1">中导</option>
+                         <option value="2">慧翰</option>
+                         <option value="3">通领</option>
                     </select>
 				</dd>
 			</dl>
@@ -52,6 +52,16 @@
 				<dt>当前版本</dt>
 				<dd  >
 					<input  name="fromVersionEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/version/upgrade/query">
+				</dd>
+			</dl>
+<dl cond="fromType" style="display:none;">
+				<dt>当前版本数据类型</dt>
+				<dd  >
+					<select class="form-control"  name="fromTypeEquals"  >
+	                    <option></option>
+                         <option value="1">升级包</option>
+                         <option value="2">插件</option>
+                    </select>
 				</dd>
 			</dl>
 <dl cond="toVersion" style="display:none;">
@@ -105,6 +115,7 @@
 			        <li><label><input cond="teType" value="teTypeText"  type="checkbox" onclick='showHideCondition(this, this.value);' >车机类型</label></li>
 			        <li><label><input cond="teModel" value="teModel" checked="checked" type="checkbox" onclick='showHideCondition(this, this.value);' >车机型号</label></li>
 			        <li><label><input cond="fromVersion" value="fromVersionText"  type="checkbox" onclick='showHideCondition(this, this.value);' >当前版本</label></li>
+			        <li><label><input cond="fromType" value="fromTypeText"  type="checkbox" onclick='showHideCondition(this, this.value);' >当前版本数据类型</label></li>
 			        <li><label><input cond="toVersion" value="toVersionText"  type="checkbox" onclick='showHideCondition(this, this.value);' >目的版本</label></li>
 			        <li><label><input cond="status" value="statusText"  type="checkbox" onclick='showHideCondition(this, this.value);' >状态</label></li>
 			        <li><label><input cond="addTime" value="addTime"  type="checkbox" onclick='showHideCondition(this, this.value);' >添加时间</label></li>
