【added】指令添加权限控制，车机中心页面端bug修复

--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/index_list2.html
@@ -74,7 +74,7 @@
 
 </div>
 <script type="text/html" id="tlCsrUpdateTime">
-    <div>{{dateFormat(d.csrUpdateTime, "yyyy-MM-dd HH:mm:ss")}}</div>
+    <div>{{d.csrUpdateTime?dateFormat(d.csrUpdateTime, "yyyy-MM-dd HH:mm:ss"):''}}</div>
 </script>
 
 <script type="text/html" id="tlCsrAddTime">
