--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/remote.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/remote.html
@@ -54,11 +54,15 @@
 					   </select>
 					</dd>
 				</dl>
-				<dl class="rowfull" style="height: auto; width: 80%;">
-					<table border="1" cellspacing="0" id="table" style="text-align:center;">
+				<dl class="rowfull" style="height: auto;">
+					<dt></dt>
+					<dd>
+						<table border="1" cellspacing="0" id="table" style="text-align:center;">
 							<tr id="th"></tr>
 							<tr id="td"></tr>
-					</table>
+						</table>
+					</dd>
+
 				</dl>
 				<dl class="rowfull" style="height: auto;">
 					<dt>备注：</dt>
