--- a/vc-web/vc-web-front/src/main/resources/public/auth/user/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/user/index_query.html
@@ -69,7 +69,11 @@
 <dl cond="suStatus" style="display:none;">
 				<dt>状态</dt>
 				<dd  >
-					<input  name="suStatusEquals" placeholder="请输入数字" class="form-control" >
+					<select name="suStatusEquals" class="form-control" >
+						<option value=""></option>\
+						<option value="0">失效</option>
+						<option value="1">正常</option>
+					</select>
 				</dd>
 			</dl>
 			<div class="querybtns">
