【Updated】优化修改页面的组字段

--- a/vc-web/vc-web-front/src/main/resources/public/auth/user/edit.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/user/edit.html
@@ -24,7 +24,8 @@
 				<dl  >
 					<dt>所属组：</dt>
 					<dd>
-						<input name="suGroup" placeholder="请输入所属组" class="form-control searchinput" dataUrl="/auth/group/query">
+						<!--<input name="suGroup" placeholder="请输入所属组" class="form-control searchinput" dataUrl="/auth/group/query">-->
+						<input name="suGroup" disabled="disabled" placeholder="请输入所属组" class="form-control">
 						<label id="suGroup-error" class="error"><i class="fa fa-info-circle fieldTip">必填</i></label>
 					</dd>
 				</dl>
