【update】更新远程指令控制页面提示，格式化代码

--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/remote.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/remote.html
@@ -26,6 +26,8 @@
 		<div style="color: red; font-size: 15px; text-align:center"></div>
 		<form class="form-horizontal" id="addform" style="margin:15px;">
 			<div class="form-group" id="conditionId" style="height:80%;">
+				<p style="color:red;text-align:center;">
+					请输入VIN码、车机号、车牌号，以半角逗号分隔</p>
 				<dl class="rowfull" style="height: auto;">
 					<dt>号码列表：</dt>
 					<dd>
