【Updated】FTP服务器管理去除编辑功能

--- a/vc-web/vc-web-front/src/main/resources/public/version/ftpserver/edit.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/ftpserver/edit.html
@@ -20,52 +20,52 @@
 		<form class="form-horizontal" id="addform" style="margin:15px;">
 			<div class="form-group" id="conditionId" style="height:80%;">
 				<input name="id" id="keyInput" type="hidden"  />
-				<dl  >
-					<dt>服务器名称</dt>
-					<dd>
-					<input name="name"  placeholder="" class="form-control" >
-				<label id="name-error" class="error" for="name"><i class="fa fa-info-circle fieldTip">必填</i></label>
-					</dd>
-				</dl>
-				<dl  >
-					<dt>登陆用户名</dt>
-					<dd>
-					<input name="serUsername"  placeholder="" class="form-control" >
-				<label id="serUsername-error" class="error" for="serUsername"><i class="fa fa-info-circle fieldTip">必填</i></label>
-					</dd>
-				</dl>
-				<dl  >
-					<dt>登陆密码</dt>
-					<dd>
-					<input name="serPwd"  placeholder="" class="form-control" >
-				<label id="serPwd-error" class="error" for="serPwd"><i class="fa fa-info-circle fieldTip">必填</i></label>
-					</dd>
-				</dl>
-				<dl  >
-					<dt>远程地址</dt>
-					<dd>
-					<input name="url"  placeholder="" class="form-control" >
-				<label id="url-error" class="error" for="url"><i class="fa fa-info-circle fieldTip">必填</i></label>
-					</dd>
-				</dl>
-				<dl  >
-					<dt>端口</dt>
-					<dd>
-					<input name="port"  placeholder="" class="form-control" >
-				<label id="port-error" class="error" for="port"><i class="fa fa-info-circle fieldTip">必填</i></label>
-					</dd>
-				</dl>
-				<dl  >
-					<dt>服务器类型</dt>
-					<dd>
-					<select class="form-control" name="type"  >
-                         <option></option>
-                         <option value="0">ftp服务器</option>
-                         <option value="1">http服务器</option>
-                    </select>
-				<label id="type-error" class="error" for="type"><i class="fa fa-info-circle fieldTip">必填</i></label>
-					</dd>
-				</dl>
+				<!--<dl  >-->
+					<!--<dt>服务器名称</dt>-->
+					<!--<dd>-->
+					<!--<input name="name"  placeholder="" class="form-control" >-->
+				<!--<label id="name-error" class="error" for="name"><i class="fa fa-info-circle fieldTip">必填</i></label>-->
+					<!--</dd>-->
+				<!--</dl>-->
+				<!--<dl  >-->
+					<!--<dt>登陆用户名</dt>-->
+					<!--<dd>-->
+					<!--<input name="serUsername"  placeholder="" class="form-control" >-->
+				<!--<label id="serUsername-error" class="error" for="serUsername"><i class="fa fa-info-circle fieldTip">必填</i></label>-->
+					<!--</dd>-->
+				<!--</dl>-->
+				<!--<dl  >-->
+					<!--<dt>登陆密码</dt>-->
+					<!--<dd>-->
+					<!--<input name="serPwd"  placeholder="" class="form-control" >-->
+				<!--<label id="serPwd-error" class="error" for="serPwd"><i class="fa fa-info-circle fieldTip">必填</i></label>-->
+					<!--</dd>-->
+				<!--</dl>-->
+				<!--<dl  >-->
+					<!--<dt>远程地址</dt>-->
+					<!--<dd>-->
+					<!--<input name="url"  placeholder="" class="form-control" >-->
+				<!--<label id="url-error" class="error" for="url"><i class="fa fa-info-circle fieldTip">必填</i></label>-->
+					<!--</dd>-->
+				<!--</dl>-->
+				<!--<dl  >-->
+					<!--<dt>端口</dt>-->
+					<!--<dd>-->
+					<!--<input name="port"  placeholder="" class="form-control" >-->
+				<!--<label id="port-error" class="error" for="port"><i class="fa fa-info-circle fieldTip">必填</i></label>-->
+					<!--</dd>-->
+				<!--</dl>-->
+				<!--<dl  >-->
+					<!--<dt>服务器类型</dt>-->
+					<!--<dd>-->
+					<!--<select class="form-control" name="type"  >-->
+                         <!--<option></option>-->
+                         <!--<option value="0">ftp服务器</option>-->
+                         <!--<option value="1">http服务器</option>-->
+                    <!--</select>-->
+				<!--<label id="type-error" class="error" for="type"><i class="fa fa-info-circle fieldTip">必填</i></label>-->
+					<!--</dd>-->
+				<!--</dl>-->
 		</div>
 		
 		<div class="form-group windowButtonBar">
