--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_list3.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_list3.html
@@ -29,7 +29,7 @@
           <li><label><input value="teNumber" checked="checked" type="checkbox"
                             onclick='showHideColumn(this, this.value);'>车机号</label></li>
           <li><label><input value="vin" checked="checked" type="checkbox"
-                            onclick='showHideColumn(this, this.value);'>VIN码</label></li>
+                            onclick='showHideColumn(this, this.value);'>车架号</label></li>
           <li><label><input value="orderNo" checked="checked" type="checkbox"
                             onclick='showHideColumn(this, this.value);'>订单号</label></li>
           <li><label><input value="logInfo" checked="checked" type="checkbox"
@@ -109,7 +109,7 @@
   var tableId = "TCsLogger";
   var clms = [{checkbox: true}
     , {field: "teNumber", title: "车机号", width: 110, sort: true}
-    , {field: "vin", title: "车辆", width: 110, sort: true}
+    , {field: "vin", title: "车架号", width: 110, sort: true}
     , {field: "orderNo", title: "订单号", width: 110, sort: true}
     , {field: "logInfo", title: "日志信息", width: 110, sort: true}
     , {field: "sourceHex", title: "原始数据", width: 110, sort: true}
