【Updated】1,车机网络日志增加字段UUID;2,后台页面时间查询控件更新

--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index.html
@@ -12,6 +12,7 @@
 		<link href="/css/font-awesome.min.css?v=4.4.0" rel="stylesheet">
 		<link rel="stylesheet" href="/layui/css/layui.css?t=1510164124207" media="all">
 		<link href="/css/plugins/jqgrid/ui.jqgrid.css?0820" rel="stylesheet">		<!-- jqgrid-->
+		<link href="/css/plugins/daterangepicker/daterangepicker.css?0820" rel="stylesheet">
     <link href="/css/cnmain.css" rel="stylesheet">
 	</head>
 
@@ -29,9 +30,11 @@
 		<script src="/js/contabs.min.js"></script>
 		<script src="/js/layer/layer.js"></script>
 		<script src="/js/url.js"></script>
-	<script src="/js/tpui-core.js"></script>
+		<script src="/js/moment.js"></script>
+		<script src="/js/tpui-core.js"></script>
 		<script src="/js/plugins/jqgrid/i18n/grid.locale-cn.js"></script>
 		<script src="/js/plugins/jqgrid/jquery.jqGrid.min.js"></script>
+		<script src="/js/plugins/daterangepicker/daterangepicker.js"></script>
 		<!-- <script src="/layui/layui.all.js?t=1510164124207"></script> -->
 		<script src="/layui/layui.js?t=1510164124207"></script>
 		
