--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_list3.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_list3.html
@@ -136,10 +136,7 @@
       countName: "count"
     },
     request: {limitName: "rows"},
-    where: {
-      // sidx: "addTime",
-      // sord: "desc"
-    }
+    where: getFormData(operate.getQueryForm())
   };
 
   function showHideColumn() {
