--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/index_list2.html
@@ -185,10 +185,7 @@
             countName: "count"
         },
         request: {limitName: "rows"},
-        where: {
-            sidx: "csrAddTime",
-            sord: "desc"
-        }
+        where: getFormData(operate.getQueryForm())
     };
 
     function showHideColumn() {
