--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_query2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_query2.html
@@ -1,95 +1,122 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-	</head>
+<head>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+</head>
 <body>
-	<form class="form-horizontal queryform">
-		<div class="form-group">
-<dl cond="teNumber">
-				<dt>车机号：</dt>
-				<dd  >
-					<input  name="csNumberEquals" placeholder="请输入车机号" class="form-control " >
-				</dd>
-			</dl>
-<dl cond="vin">
-				<dt>车辆：</dt>
-				<dd  >
-					<input  name="csVinEquals" placeholder="" class="form-control">
-				</dd>
-			</dl>
-<dl cond="addTime">
-				<dt>添加时间：</dt>
-				<dd class="timergroup" >
-					<input  name="addTimeStart"  placeholder="开始时间" class="form-control timegroupinput timeStart" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
-                    <label class="timegrouplabel">-</label>
-                    <input  name="addTimeEnd" placeholder="结束时间" class="form-control timegroupinput timeEnd" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
-				</dd>
-      </dl>
-      
-			<div class="querybtns">
-				<button class="btn btn-success searchBtn" type="button" onclick="operate.query();"><i class="glyphicon fa fa-search"></i>查询</button>
-				<button class="btn btn-primary" type="button" resetForm><i class="glyphicon fa fa-reply"></i>清空</button>
-        <!--<div class="btn-group">
-          <button type="button" class="btn btn-default btn-outline dropdown-toggle"
-                  data-toggle="dropdown" aria-expanded="false">
-            <i class="glyphicon glyphicon-list"></i>更多条件
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu tableMenu conditionMenu" role="menu">
-            <li><label><input cond="teNumber" value="teNumber" type="checkbox"
-                              onclick='showHideCondition(this, this.value);'>车机号</label></li>
-            <li><label><input cond="vin" value="vin" type="checkbox"
-                              onclick='showHideCondition(this, this.value);'>vin</label></li>
-            <li><label><input cond="addTime" value="addTime" type="checkbox"
-                              onclick='showHideCondition(this, this.value);'>添加时间</label></li>
-          </ul>
-        </div>-->
-			</div>
-		</div>
-	</form>
+<form class="form-horizontal queryform">
+  <div class="form-group">
+    <dl cond="teNumber">
+      <dt>车机号：</dt>
+      <dd>
+        <input name="csNumberEquals" placeholder="请输入车机号" class="form-control ">
+      </dd>
+    </dl>
+    <dl cond="vin">
+      <dt>车辆：</dt>
+      <dd>
+        <input name="csVinEquals" placeholder="" class="form-control">
+      </dd>
+    </dl>
+    <input name="addTimeStart" type="hidden">
+    <input name="addTimeEnd" type="hidden">
+
+    <dl cond="addTime">
+      <dt>添加时间：</dt>
+      <dd class="timergroup">
+        <input type="text" name="datePicker" class="form-control" id="datePicker">
+      </dd>
+    </dl>
+    <div class="querybtns">
+      <button class="btn btn-success searchBtn" type="button" onclick="operate.query();"><i
+          class="glyphicon fa fa-search"></i>查询
+      </button>
+      <button class="btn btn-primary" type="button" resetForm><i class="glyphicon fa fa-reply"></i>清空
+      </button>
+    </div>
+  </div>
+</form>
 </body>
 <script type="text/javascript">
-$(".searchinput").each(function(){
-	$(this).searchinput({});
-});
-$("button[resetForm]").click(function(){
-	resetForm($(this).parents("form")[0]);
-});
-$(".searchBtn").click(function () {
-  var addTimeStart = $(".timeStart").val();
-  var startTimestamp = new Date(addTimeStart).getTime();
-  var addTimeEnd = $(".timeEnd").val();
-  var endTimestamp = new Date(addTimeEnd).getTime();
-  var csNumber = $("input[name='csNumberEquals']").val();
-  var csVin = $("input[name='csVinEquals']").val();
+  var startTimestamp = moment().hours(0).minutes(0).seconds(0);
+  var endTimestamp = moment(new Date());
+  var startTime = startTimestamp.format('YYYY-MM-DD HH:mm:ss');
+  var endTime = endTimestamp.format('YYYY-MM-DD HH:mm:ss');
+  $('input[name="addTimeStart"]').val(startTime);
+  $('input[name="addTimeEnd"]').val(endTime);
+  $(document).ready(function () {
+    $('input[name="datePicker"]').daterangepicker({
+      autoApply: true,
+      showDropdowns: true,
+      timePicker: true, //显示时间
+      timePicker24Hour: true, //时间制
+      timePickerSeconds: true, //时间显示到秒
+      startDate: startTime, //设置开始日期
+      endDate: endTime, //设置结束器日期
+      maxDate: endTime, //设置最大日期
+      opens: "center",
+      dateLimit: {
+        "days": 30
+      },
+      ranges: {
+        // '今天': [moment(), moment()],
+        '昨天': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+        '上周': [moment().subtract(6, 'days'), moment()],
+        '前30天': [moment().subtract(29, 'days'), moment()],
+        '本月': [moment().startOf('month'), moment().endOf('month')],
+        '上月': [moment().subtract(1, 'month').startOf('month'),
+          moment().subtract(1, 'month').endOf('month')]
+      },
+      showWeekNumbers: true,
+      locale: {
+        format: "YYYY-MM-DD HH:mm:ss", //设置显示格式
+        applyLabel: '确定', //确定按钮文本
+        cancelLabel: '取消', //取消按钮文本
+        customRangeLabel: '自定义',
+        daysOfWeek: ['日', '一', '二', '三', '四', '五', '六'],
+        monthNames: ['一月', '二月', '三月', '四月', '五月', '六月',
+          '七月', '八月', '九月', '十月', '十一月', '十二月'
+        ],
+        firstDay: 1
+      },
+    }, function (start, end, label) {
+      startTime = start.format('YYYY-MM-DD HH:mm:ss');
+      endTime = end.format('YYYY-MM-DD HH:mm:ss');
+      $('input[name="addTimeStart"]').val(startTime);
+      $('input[name="addTimeEnd"]').val(endTime);
+    });
+  });
+  $(".searchinput").each(function () {
+    $(this).searchinput({});
+  });
+  $("button[resetForm]").click(function () {
+    resetForm($(this).parents("form")[0]);
+  });
+  $(".searchBtn").click(function () {
+    var addTimeStart = startTime;
+    var startTimestamp = new Date(addTimeStart).getTime();
+    var addTimeEnd = endTime;
+    var endTimestamp = new Date(addTimeEnd).getTime();
+    var csNumber = $("input[name='csNumberEquals']").val();
+    var csVin = $("input[name='csVinEquals']").val();
 
-  if(addTimeStart == "" || addTimeEnd == "") {
-    layer.msg("开始时间和结束时间不能为空",  {icon: 7, time:1600});
-  }
-  if(csNumber == "" && csVin == "") {
-    layer.msg("车机号和车辆号不能同时为空", {icon: 7, time:1600});
-	}
-	if(startTimestamp > endTimestamp) {
-    layer.msg("开始时间不能大于结束时间", {icon:7, time:1600});
-	}
-	if(endTimestamp - startTimestamp > 30*24*60*60*1000) {
-    layer.msg("最多只能查询一个月内的数据", {icon:7, time:1600});
-	}
-});
+    if (csNumber == "" && csVin == "") {
+      layer.msg("车机号和车辆号不能同时为空", {icon: 7, time: 1600});
+    }
+  });
 
-$(".conditionMenu").find("input[type=checkbox]").each(function(){
-	$(this).click(function(){
-		var flag = $(this).is(':checked');
-		$(".queryform").find("dl[cond="+$(this).attr("cond")+"]").each(function(){
-			if(flag){
-				$(this).show();
-			}else{
-				$(this).val("");
-				$(this).hide();
-			}
-		});
-		$(window).trigger("resize");
-	});
-});
+  $(".conditionMenu").find("input[type=checkbox]").each(function () {
+    $(this).click(function () {
+      var flag = $(this).is(':checked');
+      $(".queryform").find("dl[cond=" + $(this).attr("cond") + "]").each(function () {
+        if (flag) {
+          $(this).show();
+        } else {
+          $(this).val("");
+          $(this).hide();
+        }
+      });
+      $(window).trigger("resize");
+    });
+  });
 </script>
