--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/index_query.html
@@ -82,20 +82,14 @@
 					<input  name="csrRemark" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="csrUpdateTime" style="display:none;">
-				<dt>成功时间：</dt>
-				<dd class="timergroup" >
-					<input  name="csrUpdateTimeStart"  placeholder="开始时间" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
-                    <label class="timegrouplabel">-</label>
-                    <input  name="csrUpdateTimeEnd" placeholder="结束时间" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
-				</dd>
-			</dl>
-<dl cond="csrAddTime">
+
+			<input name="startTime" type="hidden">
+			<input name="endTime" type="hidden">
+
+			<dl cond="addTime">
 				<dt>添加时间：</dt>
-				<dd class="timergroup" >
-					<input  name="startTime"  placeholder="开始时间" class="form-control timegroupinput timeStart" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
-                    <label class="timegrouplabel">-</label>
-                    <input  name="endTime" placeholder="结束时间" class="form-control timegroupinput timeEnd" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
+				<dd class="timergroup">
+					<input type="text" name="datePicker" class="form-control" id="datePicker">
 				</dd>
 			</dl>
 <dl cond="csrState">
@@ -152,24 +146,59 @@
 	</form>
 </body>
 <script type="text/javascript">
+  var startTimestamp = moment().hours(0).minutes(0).seconds(0);
+  var endTimestamp = moment(new Date());
+  var startTime = startTimestamp.format('YYYY-MM-DD HH:mm:ss');
+  var endTime = endTimestamp.format('YYYY-MM-DD HH:mm:ss');
+  $('input[name="startTime"]').val(startTime);
+  $('input[name="endTime"]').val(endTime);
+  $(document).ready(function () {
+    $('input[name="datePicker"]').daterangepicker({
+      autoApply: true,
+      showDropdowns: true,
+      timePicker: true, //显示时间
+      timePicker24Hour: true, //时间制
+      timePickerSeconds: true, //时间显示到秒
+      startDate: startTime, //设置开始日期
+      endDate: endTime, //设置结束器日期
+      maxDate: endTime, //设置最大日期
+      opens: "center",
+      dateLimit: {
+        "days": 30
+      },
+      ranges: {
+        // '今天': [moment(), moment()],
+        '昨天': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+        '上周': [moment().subtract(6, 'days'), moment()],
+        '前30天': [moment().subtract(29, 'days'), moment()],
+        '本月': [moment().startOf('month'), moment().endOf('month')],
+        '上月': [moment().subtract(1, 'month').startOf('month'),
+          moment().subtract(1, 'month').endOf('month')]
+      },
+      showWeekNumbers: true,
+      locale: {
+        format: "YYYY-MM-DD HH:mm:ss", //设置显示格式
+        applyLabel: '确定', //确定按钮文本
+        cancelLabel: '取消', //取消按钮文本
+        customRangeLabel: '自定义',
+        daysOfWeek: ['日', '一', '二', '三', '四', '五', '六'],
+        monthNames: ['一月', '二月', '三月', '四月', '五月', '六月',
+          '七月', '八月', '九月', '十月', '十一月', '十二月'
+        ],
+        firstDay: 1
+      },
+    }, function (start, end, label) {
+      startTime = start.format('YYYY-MM-DD HH:mm:ss');
+      endTime = end.format('YYYY-MM-DD HH:mm:ss');
+      $('input[name="startTime"]').val(startTime);
+      $('input[name="endTime"]').val(endTime);
+    });
+  });
 $(".searchinput").each(function(){
 	$(this).searchinput({});
 });
 $("button[resetForm]").click(function(){
 	resetForm($(this).parents("form")[0]);
-});
-$(".searchBtn").click(function () {
-  var addTimeStart = $(".timeStart").val();
-  var startTimestamp = new Date(addTimeStart).getTime();
-  var addTimeEnd = $(".timeEnd").val();
-  var endTimestamp = new Date(addTimeEnd).getTime();
-
-  if(startTimestamp > endTimestamp) {
-    layer.msg("开始时间不能大于结束时间", {icon:7, time:1600});
-  }
-  if(endTimestamp - startTimestamp > 30*24*60*60*1000) {
-    layer.msg("最多只能查询一个月内的数据", {icon:7, time:1600});
-  }
 });
 
 $(".conditionMenu").find("input[type=checkbox]").each(function(){
