【Updated】页面文案更新

--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_query2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_query2.html
@@ -13,7 +13,7 @@
       </dd>
     </dl>
     <dl cond="vin">
-      <dt>车辆：</dt>
+      <dt>车架号：</dt>
       <dd>
         <input name="csVinEquals" placeholder="" class="form-control">
       </dd>
