【Updated】时间范围控件去除最大日期限制

--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_query2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_query2.html
@@ -53,7 +53,7 @@
       timePickerSeconds: true, //时间显示到秒
       startDate: startTime, //设置开始日期
       endDate: endTime, //设置结束器日期
-      maxDate: endTime, //设置最大日期
+      //maxDate: endTime, //设置最大日期
       opens: "center",
       dateLimit: {
         "days": 30
