【Added】添加控制指令管理的修改页面

--- a/vc-web/vc-web-front/src/main/resources/public/control/struct/add.html
+++ b/vc-web/vc-web-front/src/main/resources/public/control/struct/add.html
@@ -29,7 +29,7 @@
 				<dl  >
 					<dt>命令类型：</dt>
 					<dd>
-						<select class="form-control m-b" name="cssType"  >
+						<select class="form-control" name="cssType"  >
 							<option></option>
 							<option value="1">高级命令</option>
 							<option value="0">一般命令</option>
