--- a/vc-web/vc-web-front/src/main/resources/public/control/struct/edit.html
+++ b/vc-web/vc-web-front/src/main/resources/public/control/struct/edit.html
@@ -20,7 +20,56 @@
 		<form class="form-horizontal" id="addform" style="margin:15px;">
 			<div class="form-group" id="conditionId" style="height:80%;">
 				<input name="cssId" id="keyInput" type="hidden"  />
-		</div>
+				<dl  >
+					<dt>指令名称：</dt>
+					<dd>
+						<input name="cssName" placeholder="请输入指令名称" class="form-control" >
+						<label id="cssName-error" class="error" for="cssName"><i class="fa fa-info-circle fieldTip">必填</i></label>
+					</dd>
+				</dl>
+				<dl  >
+					<dt>命令类型：</dt>
+					<dd>
+						<select class="form-control" name="cssType"  >
+							<option></option>
+							<option value="1">高级命令</option>
+							<option value="0">一般命令</option>
+						</select>
+						<label id="cssType-error" class="error" for="cssType"><i class="fa fa-info-circle fieldTip">必填</i></label>
+					</dd>
+				</dl>
+				<dl class="rowfull" >
+					<dt>请求示例：</dt>
+					<dd>
+						<input name="cssReqCode" placeholder="请输入请求示例" class="form-control" >
+					</dd>
+				</dl>
+				<dl class="rowfull" >
+					<dt>请求结构：</dt>
+					<dd>
+						<input name="cssRequest" placeholder="请输入请求结构" class="form-control" >
+					</dd>
+				</dl>
+				<dl class="rowfull" >
+					<dt>响应示例：</dt>
+					<dd>
+						<input name="cssRepCode" placeholder="请输入响应示例" class="form-control" >
+					</dd>
+				</dl>
+				<dl class="rowfull" >
+					<dt>响应结构：</dt>
+					<dd>
+						<input name="cssResponse" placeholder="请输入响应结构" class="form-control" >
+					</dd>
+				</dl>
+				<dl  >
+					<dt>状态：</dt>
+					<dd>
+						<input name="cssStatus" placeholder="请输入关键字" class="form-control searchinput"  dataWhere="status"  dataUrl="/base/dict/query">
+						<label id="cssStatus-error" class="error" for="cssStatus"><i class="fa fa-info-circle fieldTip">必填</i></label>
+					</dd>
+				</dl>
+			</div>
 		
 		<div class="form-group windowButtonBar">
 			<div class="hr-line-dashed"></div>
@@ -54,7 +103,16 @@
  			 */
 			var validateRuleConfig = {
 				rules:{
-				
+          "cssName":{
+            "maxlength":256,
+            "required":true
+          },
+          "cssType":{
+            "required":true
+          },
+          "cssStatus":{
+            "required":true
+          }
 			}
 			};
 			
